# SpellChecker

./: CMakeLists.txt  README.md
src/: AVLTree.h  BinarySearchTree.h  DictionarySet.cpp  DictionarySet.h  DictionaryTree.cpp  DictionaryTree.h  IDictionary.h  OutputFile.cpp  OutputFile.h  Spellchecker.h  TernarySearchTree.h  Tools.cpp  Tools.h  main.cpp
